# CLOG_Bazel

./: bazel-bin  bazel-clog  bazel-out  bazel-testlogs
bazel/: clog_build.sh
examples/: BUILD.bazel  clog
examples/clogsample/: BUILD.bazel  clog.bzl  clog_build.sh  debug.sh  file.sh  simple.cpp  simple_helper.cpp
src/clog/: BUILD.bazel  CommandLineArguments.cs  clog.cs  clog.csproj
src/clog/test/: BUILD.bazel  file.sh
src/clogutils/: BUILD.bazel  CLogCustomTraceEmittorFactory.cs  CLogSidecar.cs  clogutils.csproj
src/clogutils/ConfigFile/: CLogConfigurationFile.cs  CLogTypeEncoder.cs
