load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "publish_binary",
    "csharp_nunit_test",
)
load("//examples/clogsample:clog.bzl", "clog")

cc_binary(
    name = "clog_c_test",
    includes = ["../../src/clogutils"],
    srcs = ["simple.cpp", 
            "simple_helper.cpp", 
            "simple.cpp.clog.h", 
            #"TEST_simple.cpp.clog.h.c",             
            "simple_helper.cpp.clog.h",
            #"TEST_simple_helper.cpp.clog.h.c",            
            "//src/clogutils:clog.h"],
    deps = [":thing"]
)

# Learn this 
# https://bazel.build/build/style-guide
clog(name="thing1", src="simple.cpp")
clog(name="thing2", src="simple_helper.cpp")

cc_library(
    name = "thing",
    hdrs = ["simple.cpp.clog.h", "simple_helper.cpp.clog.h"],
    includes = ["."],
  )

