load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "publish_binary",
    "csharp_nunit_test",
)
load("//examples/clogsample:clog.bzl", "clog")

cc_binary(
    name = "clog_c_test",
    includes = ["../../src/clogutils"],
    srcs = ["simple.cpp", 
            "simple_helper.cpp",            
            "//src/clogutils:clog.h"],
    deps = [":simple", 
            ":simple_helper"]
)

clog(name="simple", src="simple.cpp")
clog(name="simple_helper", src="simple_helper.cpp")